openshift/netpol/allow-egress-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-same-namespace
spec:
  podSelector: {}
  egress:
  - to:
    - podSelector: {}
  policyTypes:
  - Egress
